관리자 문의 내역출력  해결